--- a/tweeter_frontend/main.css
+++ b/tweeter_frontend/main.css
@@ -26,7 +26,7 @@
   outline: none;
 }
 
-.right button{
+.right button, #login-form input[type=submit]{
   float: right;
   width: 70px;
   background: rgb(61, 167, 249);
@@ -37,3 +37,18 @@
   border: none;
   font-weight: 700;
 }
+
+#login-form{
+  font-family: sans-serif;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  padding: 30px;
+  box-shadow: 0 10px 10px 5px rgba(61, 167, 249, 0.474);
+}
+
+#login-form input{
+  margin: 15px
+}
+
